--- a/css-brochure-form/styles.css
+++ b/css-brochure-form/styles.css
@@ -1,8 +1,3 @@
-* {
-  text-align: start;
-  justify-content: start;
-}
-
 h2 {
   color: rgb(250 95 52);
   font-size: 16px;
@@ -38,4 +33,9 @@ select {
   border-radius: 4px;
   padding: 7px 242px 7px 5px;
   background-color: rgb(240 240 240);
+}
+
+.container {
+  width: 350px;
+  margin: auto;
 }
